# mujoco-battle-royale

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
config/experiments/: 4v4_baseline.yaml
docs/superpowers/plans/: 2026-04-18-battle-royale-implementation.md
docs/superpowers/specs/: 2026-03-28-battle-royale-design.md
model/: __init__.py  model.py
src/battle_royale/: __init__.py
src/battle_royale/application/evaluation/: evaluator.py
src/battle_royale/application/metrics/: elo.py  tracker.py
src/battle_royale/application/training/: snapshot_pool.py  trainer.py
src/battle_royale/domain/entities/: __init__.py  agent.py  arena.py
src/battle_royale/domain/interfaces/: __init__.py  environment.py  logger.py  policy.py
src/battle_royale/domain/services/: __init__.py  elimination.py  observation.py  reward.py
src/battle_royale/infrastructure/config/: yaml_loader.py
src/battle_royale/infrastructure/logging/: wandb_logger.py
src/battle_royale/infrastructure/physics/: __init__.py  (+2 more)
src/battle_royale/interfaces/: __init__.py
tests/integration/: test_environment.py
tests/unit/application/: test_elo.py  test_evaluator.py  test_snapshot_pool.py  test_tracker.py  test_trainer.py
tests/unit/domain/: test_elimination.py  test_entities.py  test_interfaces.py  test_observation.py  test_reward.py
tests/unit/infrastructure/: test_mujoco_env.py  test_video_recorder.py  test_wandb_logger.py  test_xml_builder.py  test_yaml_loader.py
tests/unit/interfaces/: test_cli.py  test_pettingzoo_env.py
(+5 files in other folders)
